objects/SVMX_PS_ES_Service_Report_Name_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores mapping of Service Report Names</description>
    <label>Email Service Report Name Settings</label>
    <fields>
        <fullName>SVMX_PS_ES_Object_API_Name__c</fullName>
        <description>This field carries the Object API Name</description>
        <inlineHelpText>This field carries the Object API Name</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_ES_Record_Type_Name__c</fullName>
        <description>This field carries the name of record type</description>
        <inlineHelpText>This field carries the name of record type</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_ES_Service_Report_Name__c</fullName>
        <description>This field stores the names of service reports which need to be send. This should contain a unique set of characters which can be in attachment name and uniquely identify the document for sending. This can contain many names separated by comma</description>
        <inlineHelpText>This field stores the names of service reports which need to be send. This should contain a unique set of characters which can be in attachment name and uniquely identify the document for sending. This can contain many names separated by comma</inlineHelpText>
        <label>Service Report Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>